--- a/GeorgianEgg/Views/Shared/_Layout.cshtml
+++ b/GeorgianEgg/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; Your Name & Student Number Here - COMP2084-W23-Final-A - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; Harman Preet Singh - 200507745 - COMP2084-W23-Final-A - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
