Everything before Unit Test Is Done

--- a/GeorgianEgg/Views/Orders/Details.cshtml
+++ b/GeorgianEgg/Views/Orders/Details.cshtml
@@ -80,9 +80,13 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
+                <th>Image</th>
                 <th>Product</th>
                 <th>Quantity</th>
                 <th>Price</th>
+                
+                <th>PricePerItem</th>
+                
             </tr>
         </thead>
 
@@ -90,9 +94,12 @@
             @foreach (var orderLine in Model.OrderLines)
             {
                 <tr>
+                    <td><img class="thumbnail" src="~/img/products/@orderLine.Product.Image" alt="Product"></td>
                     <td>@orderLine.Product.Name</td>
                     <td>@orderLine.Quantity</td>
                     <td>@orderLine.Price.ToString("C")</td>
+                    <td>$@(@orderLine.Price/@orderLine.Quantity)</td>
+                    
                 </tr>
             }
         </tbody>
