--- a/GeorgianEgg/Views/Shared/_Layout.cshtml
+++ b/GeorgianEgg/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-controller="Products" asp-action="Index">Products</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-controller="Home" asp-action="Support">Support</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
